# posttraining

./: .gitignore
configs/: qwen3-4b-sft.toml
datagen/: 1_prompt_generation.py  2_data_gen.py  3_build_dataset.py  generated_prompts.json  main.py  model_spec.md  pyproject.toml  topics.json
datagen/conversations/: art_and_music.jsonl  biology.jsonl  brainstorming.jsonl  chemistry.jsonl  computer_science.jsonl  economics.jsonl  encouragement.jsonl  geography.jsonl  greetings.jsonl  history.jsonl  how-to.jsonl  jokes_and_wordplay.jsonl  languages_and_linguistics.jsonl  life.jsonl  literature.jsonl  math.jsonl  people.jsonl  philosophy.jsonl  physics.jsonl  planning.jsonl  poetry.jsonl  short_fiction.jsonl  small_talk.jsonl  venting.jsonl
datagen/dataset/: dataset_info.json  state.json
